# strongly-typed

./: .gitignore  Cargo.toml  README.md
.github/workflows/: scheduled.yml  test.yml
number/: Cargo.toml
number/src/: main.rs
src/: lib.rs
string/: Cargo.toml
tests/: alpha_numeric.rs  hoge.rs  parallel_validation.rs  range.rs  sequential_validation.rs
